# Advanced

./: README.md
Task Management System/TaskManagement/: package-lock.json  package.json
moodboard-ai/: .env  package-lock.json  package.json  tailwind.config.js  vite.config.js
moodboard-ai/server/: .env  .eslintrc.json  index.js  package-lock.json  package.json
moodboard-ai/src/: App.jsx  Icons.jsx  index.css  main.jsx
notepadx/: index.html  package-lock.json  package.json  tailwind.confi.js  vite.config.js
notepadx/src/: App.jsx
notepadx/src-tauri/: Cargo.toml  tauri.conf.json
notepadx/src-tauri/src/: main.rs
notepadx/src/components/: NoteEditor.jsx  NoteList.jsx  ToggleTheme.jsx
notepadx/src/db/: db.js
