[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.2.0", features = ["dialog", "shell", "window", "fs", "clipboard"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }


[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
